# textual-tty

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Makefile  README.md  TEST_REFACTORING_SUMMARY.md  color.py  grid.py  index.html  mkdocs.yml  parser.py  pyproject.toml  screen_writer.py  tty.py
.github/workflows/: release.yml
LICENSE/: index.html
demo/: demo.py  passthrough.py  quantize.py
demo/apps/: bell.sh  mouse.sh
demo/apps/bsod/: win311-taskman.sh
demo/scripts/: lol  mouse.sh  title.sh  tv-static
demo/scripts/bsod/: amiga.sh  win2k.sh  winnt.sh
docs/pydoc/: index.md
pydoc/: index.html
scripts/: clean.sh  coverage.sh  test.sh  venv.sh
search/: search_index.json
src/textual_terminal/: __init__.py  __main__.py  color.py  demo.py  grid.py  log.py  parser.py  program.py  pty.py  pty_handler.py  screen.py  screen_writer.py  terminal.py  tty.py
src/textual_terminal/widgets/: __init__.py  debug_log.py  program.py  program_window.py  terminal.py
src/textual_tty/: __init__.py  __main__.py  buffer.py  color.py  constants.py  debug_log.py  demo.py  log.py  monitor.py  parser.py  pty_base.py  pty_handler.py  pty_unix.py  pty_windows.py  rich_cache.py  style.py  styles.py  terminal.py  terminal_window.py  textual_terminal.py  widget.py  window.py
src/textual_tty/widgets/: __init__.py  program.py  program_window.py  terminal.py  terminal_app.py  terminal_scroll_view.py  textual_terminal.py
tests/: conftest.py  test_color.py  test_grid.py  test_input.py  test_input_modes.py  test_messages.py  test_monitor.py  test_osc_integrations.py  test_render.py  test_selection_links.py  test_style.py  test_terminal_window.py  test_window.py
tests/integration/: screen_dump.py  test_compare.py
tests/integration/compare/: htop.ansi  ncdu.ansi  test_compare.py
tests/parser/: test_alternate_buffer.py  test_c0_controls.py  test_csi_sequences.py  test_escape_sequences.py  test_keypad_and_device_sequences.py  test_keypad_sequences.py  test_osc_sequences.py  test_parse_utf8.py  test_parser_helpers.py  test_parser_state_and_modes.py  test_printable_chars.py  test_repeat_sequence.py  test_sgr_sequences.py
tests/performance/: profile_btop_direct.py  profile_passthrough_btop.py  profile_tv_static.py  run-tv-static.sh  run_command.py
tests/screen/: test_cursor.py  test_edit.py  test_screen.py  test_scroll.py  test_scroll_region.py  test_state.py
tests/unit/: test_color.py  test_input_modes.py  test_terminal.py
tests/unit/parser/: conftest.py  test_alternate_buffer.py  test_csi_sequences.py  test_escape_sequences.py  test_keypad_and_device.py  test_keypad_and_device_sequences.py  test_keypad_sequences.py  test_osc_sequences.py  test_parse_utf8.py  test_parser_helpers.py  test_parser_state_and_modes.py  test_printable_chars.py  test_repeat_sequence.py  test_sgr_sequences.py
tests/unit/screen/: test_cursor.py  test_edit.py  test_screen.py  test_scroll.py  test_scroll_region.py  test_state.py
tests/unit/terminal/: test_clearing.py  test_cursor.py  test_edit.py  test_mouse.py  test_scroll.py  test_scroll_region.py  test_state.py  test_writing.py
